--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ __pycache__/
 env/
 env3/
 files/
+static/
 build/
 develop-eggs/
 dist/
@@ -74,3 +75,4 @@ db.sqlite3
 *.json
 *.sh
 Themes/
+settings.py
